# bgp-test-framework

./: .flake8  .gitignore  LICENSE  README.md  SPEC.md  config.yaml  pyproject.toml  setup.py
RFCs/: A  B
examples/: test_example.py
examples/containerlab/: Dockerfile  topology.yml
examples/docker/: Dockerfile  docker-compose.yml  run_tests.sh
examples/docker/results/: full_compliance_report.txt  full_report.txt
src/bgp_test_framework/: __init__.py  api.py  assessments.py  cli.py  constants.py  messages.py  runner.py  tests.py
tests/: conftest.py
tests/functional/: __init__.py  test_runner.py
tests/unit/: test_api.py  test_constants.py  test_messages.py  test_tests.py
