[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "bgp-test-framework"
version = "0.1.0.2"
description = "BGPv4 Adversarial Test Framework based on RFC 4271"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "BGP Security Research"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Networking",
    "Topic :: Security",
]
keywords = ["bgp", "network", "security", "testing", "protocol"]
dependencies = [
    "pyyaml>=5.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "mypy>=0.900"
]

[project.scripts]
bgp-test = "bgp_test_framework.cli:main"

[project.urls]
Homepage = "https://github.com/example/bgp-test-framework"
Documentation = "https://github.com/example/bgp-test-framework#readme"
Repository = "https://github.com/example/bgp-test-framework"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]
exclude = ["__pycache__", ".git", ".pytest_cache"]
